--- a/Institution System.csproj
+++ b/Institution System.csproj
@@ -46,18 +46,66 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="attend.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="attend.Designer.cs">
+      <DependentUpon>attend.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Attendence.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Attendence.Designer.cs">
+      <DependentUpon>Attendence.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration.cs" />
+    <Compile Include="CourseReg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CourseReg.Designer.cs">
+      <DependentUpon>CourseReg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Courses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Courses.Designer.cs">
+      <DependentUpon>Courses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="Evaluation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Evaluation.Designer.cs">
+      <DependentUpon>Evaluation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Management.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Management.Designer.cs">
+      <DependentUpon>Management.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MangementAtten.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MangementAtten.Designer.cs">
+      <DependentUpon>MangementAtten.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Mischallanoues.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mischallanoues.Designer.cs">
+      <DependentUpon>Mischallanoues.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,11 +121,47 @@
     <Compile Include="Student.Designer.cs">
       <DependentUpon>Student.cs</DependentUpon>
     </Compile>
+    <Compile Include="Teacher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Teacher.Designer.cs">
+      <DependentUpon>Teacher.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherAtten.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TeacherAtten.Designer.cs">
+      <DependentUpon>TeacherAtten.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="attend.resx">
+      <DependentUpon>attend.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Attendence.resx">
+      <DependentUpon>Attendence.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CourseReg.resx">
+      <DependentUpon>CourseReg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Courses.resx">
+      <DependentUpon>Courses.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Evaluation.resx">
+      <DependentUpon>Evaluation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Management.resx">
+      <DependentUpon>Management.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MangementAtten.resx">
+      <DependentUpon>MangementAtten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mischallanoues.resx">
+      <DependentUpon>Mischallanoues.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -94,6 +178,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Student.resx">
       <DependentUpon>Student.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Teacher.resx">
+      <DependentUpon>Teacher.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TeacherAtten.resx">
+      <DependentUpon>TeacherAtten.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -128,6 +218,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\dashhhhhhhh.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\atten.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\attttt.jpeg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
