--- a/Institution System.csproj
+++ b/Institution System.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditStu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditStu.Designer.cs">
+      <DependentUpon>EditStu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Evaluation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,12 @@
     <Compile Include="TeacherAtten.Designer.cs">
       <DependentUpon>TeacherAtten.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewStu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewStu.Designer.cs">
+      <DependentUpon>ViewStu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="attend.resx">
       <DependentUpon>attend.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditStu.resx">
+      <DependentUpon>EditStu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Evaluation.resx">
       <DependentUpon>Evaluation.cs</DependentUpon>
@@ -184,6 +199,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TeacherAtten.resx">
       <DependentUpon>TeacherAtten.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ViewStu.resx">
+      <DependentUpon>ViewStu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
